feat: create django mock API
